--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "scripts": {
     "cdk": "cdk",
     "synth": "cdk synth",
-    "cdk:bootstrap": "npx cdk bootstrap",
+    "cdk:bootstrap": "cdk bootstrap",
     "cdk:deploy": "cdk deploy",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
+    "test": "jest",
     "lint": "eslint --ignore-path .gitignore --fix src",
     "prettier": "prettier src --write"
   },
@@ -21,11 +19,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/styles": "^5.8.7",
+    "@types/jest": "^29.5.8",
     "@types/yup": "^0.29.14",
     "aws-cdk-lib": "^2.106.1",
     "aws-lambda": "^1.0.7",
     "axios": "^0.27.2",
     "dotenv": "^16.3.1",
+    "eslint-plugin-jest": "^27.6.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
