feat: integrate with DynamoDB

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 AWS_REGION=eu-west-1
+AWS_DB_PRODUCT_TABLE='product_model'
+AWS_DB_STOCK_TABLE='stock_model'
+AWS_DB_PRODUCT_PARTITION_KEY='id'
+AWS_DB_STOCK_PARTITION_KEY='product_id'
