--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "uuid": "^9.0.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@types/aws-lambda": "^8.10.126",
     "@types/node": "^10.17.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "@vitest/ui": "^0.18.0",
