feat: integrate with SQS and SNS

--- a/product-service/package.json
+++ b/product-service/package.json
@@ -17,6 +17,7 @@
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.110.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.110.0-alpha.0",
     "@aws-sdk/client-dynamodb": "^3.454.0",
+    "@aws-sdk/client-sns": "^3.470.0",
     "@aws-sdk/lib-dynamodb": "^3.454.0",
     "@aws-sdk/util-dynamodb": "^3.454.0",
     "@emotion/react": "^11.9.3",
@@ -28,6 +29,7 @@
     "@types/yup": "^0.29.14",
     "aws-cdk-lib": "^2.106.1",
     "aws-lambda": "^1.0.7",
+    "aws-sdk-client-mock": "^3.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.3.1",
     "eslint-plugin-jest": "^27.6.0",
