--- a/import-service/package.json
+++ b/import-service/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.204.0",
     "@aws-sdk/client-s3": "^3.465.0",
+    "@aws-sdk/client-sqs": "^3.470.0",
     "@aws-sdk/s3-request-presigner": "^3.465.0",
     "@aws-sdk/util-stream-node": "^3.374.0",
     "@types/jest": "^29.5.8",
